# dmbar

./: .gitignore  README.en.md  README.md  build.sh  modify_release.sh  package-lock.json  package.json  pnpm-lock.yaml  push.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
resources/configs/: config.json  my_settings.json
scripts/: gradle-sign.py  gradle-sign.sh  te  test.html
src/: App.vue  index.html  main.ts
src-tauri/: .gitignore  2  Cargo.toml  log  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libs/binance-spot-connector-rust copy/: Cargo.toml
src-tauri/libs/binance-spot-connector-rust copy/src/hyper/: client.rs
src-tauri/libs/binance_future_connector_rust copy/: Cargo.toml
src-tauri/libs/binance_future_connector_rust copy/src/hyper/: client.rs
src-tauri/src/: api.rs  cmds.rs  error.rs  http.rs  init.rs  lib.rs  main.rs  tray.rs
src-tauri/src/parser/: http_client.rs
src-tauri/src/parser/bilibili/: html_fetcher.rs
src-tauri/src/utils1/: db.rs
src/apis/: bilibili.ts  crypto.ts  db.ts  fs.ts  live.ts  other.ts  word.ts
src/assets/js/: AestheticFluidBg.min.js  AestheticFluidBg.module.ts
src/assets/styles/: base.css  index.css  main.css  theme.css
src/components/controller_bar/: SideMenu.vue  index.vue
src/components/layouts/: HeaderLayout.vue  RootLayout.vue  SimpleLayout.vue
src/directives/: ripple.ts
src/dynamics/: Image16x9.vue  Loading.vue
src/icons/: Back.vue  Close.vue  Coins.vue  Drawer.vue  Github.vue  Link.vue  Live.vue  Max.vue  Min.vue  More.vue  Pin.vue  Refresh.vue  Setting.vue  Unpin.vue  Up.vue  Video.vue  View.vue  index.ts
src/pages/app_start/: index.vue
src/pages/cloud_phone/: index.vue
src/pages/crypto_coin/: index.vue
src/pages/enwords/: index.vue
src/pages/fast_gpt/: ContentBlock.vue  index.vue
src/pages/first_start/: index.vue
src/pages/help_feedback/: index.vue
src/pages/live/: index.vue
src/pages/player/: Player.vue  index.vue
src/pages/player/components/: Background.vue  OverlayPause.vue  ProgressBar.vue  SpeedSelector.vue  TopBar.vue  VideoControls.vue  VideoInfo.vue
src/pages/rss/: index.vue
src/pages/settings/: index.vue
src/pages/settings/components/: Base.vue  Input.vue  Navigator.vue  Selector.vue  Spliter.vue  Switch.vue  Title.vue  UpdateCheck.vue
src/pages/test/: index.vue
src/pages/translation/: index.vue
src/pages/videos/: ContentBlock.vue  index.vue
src/pages/videos/Components/: ContentBlock.vue
src/pages/videos/ContentContainer/: index.vue
src/pages/videos/SearchContainer/: index.vue
src/pages/videos/SearchPage/: index.vue
src/pages/vpn/: index.vue
src/plugins/: directive.ts  element.ts  index.ts  pinia.ts  router.ts  vant.ts
src/router/: index.ts
src/services/: checkInit.ts
src/services/settings/: index.ts
src/services/tasks/: index.ts
src/services/videos/: bilibili.ts  index.ts
src/stores/: config.ts  device.ts
src/types/: config.ts  device.ts
src/types/videos/: video.ts
src/utils/: http.ts  tauri_api.ts
test/: index.html
