[package]
name = "dmbar"
version = "0.1.0"
description = "A useful window app"
authors = ["damao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dmbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.24"
sqlite = "0.36"
futures-util = { version = "0.3" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2.0.2"

reqwest = { version = "0.11.22", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# open apis
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust.git", branch = "main", features = [
    "enable-hyper",
] }
anyhow = "1.0"
binance_future_connector = { path = "./libs/binance_future_connector_rust", features = [
    "enable-hyper",
] }
window-vibrancy = "0.5.2"
tauri-plugin-devtools = "2.0.0"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
tracing = { version = "0", features = ["log", "release_max_level_info"] }
tracing-subscriber = { version = "0", features = [
    'time',
    'env-filter',
    'json',
] }
thiserror = "1"
base64 = "0"
md-5 = "0"
