[package]
name = "dmbar"
version = "0.1.0"
description = "A useful window app"
authors = ["damao"]
edition = "2021"

[lib]
name = "dmbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# openssl-sys = { version = "0.9", features = ["vendored"] }
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.24"

sqlite = "0.36"
futures-util = { version = "0.3" }

tracing = { version = "0", features = ["log", "release_max_level_info"] }
tracing-subscriber = { version = "0", features = [
    'time',
    'env-filter',
    'json',
] }
dirs = "5"

tauri-plugin-shell = "2"
tauri-plugin-window-state = "2.0.2"
reqwest = { version = "0", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "multipart",
    # "http2",
    # "charset",
    # "macos-system-configuration",
] }
# open apis
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust.git", branch = "main", features = [
    "enable-hyper",
] }
anyhow = "1.0"
binance_future_connector = { path = "./libs/binance_future_connector_rust", features = [
    "enable-hyper",
] }
window-vibrancy = "0.5.2"
tauri-plugin-devtools = "2.0.0"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }

regex = { version = "1", default-features = false }
toml = "0"


thiserror = "1"
base64 = "0"
md-5 = "0"
bytes = "1"
url = "2"
tauri-plugin-http = "2"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
[profile.release]
lto = true
